# GomokuZero

./: .gitignore  AGENTS.md  Dockerfile  README.md  WEB_DEPLOY.md  play_console.py  play_game.py  pyproject.toml  render.yaml
.github/workflows/: gh-pages.yml
doc/: web_arena_tech_plan.md
gomoku/: README_GUI.md  alpha-beta.py  analysis.py  app.py  batched_inference.py  config.py  config.toml  console_game.py  demo_zero_mcgs_rs.py  demo_zero_mcts_rs.py  evaluate.py  gomoku_env.py  gui.py  gui_new.py  interactive_game.py  light_zero_mcts.py  mcts.ipynb  mcts.py  notebook.ipynb  player.py  policy.py  policy_server.py  policy_step_199500.pth  run_gui.py  trainer.py  utils.py  worker.py  zero_mcgs.py  zero_mcts.py
gomoku/continue_model/: policy_step_10000.pth  policy_step_150000.pth  policy_step_199500.pth  policy_step_350000.pth  policy_step_50000.pth  policy_step_660000.pth  policy_step_900000.pth  policy_step_940000.pth
gomoku/evaluation/: batch_model_evaluation.py  battle_test.py  compare_mcgs_py_rs.py  expand_validation_set.py  lightweight_battle.py  lightweight_eval.py  mcts_cases.py  model_arena.py  model_battle_test.py  quick_batch_eval.py  quick_battle_test.py  simple_battle_test.py
gomoku/evaluation/models/: policy_step_10000.pth  (+4 more)
gomoku/scripts/: arene.sh
gomoku/validation_sets/: validation_set.jsonl  validation_set_15.jsonl
web/: .gitignore  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
web/pages/: index.jsx
web/styles/: globals.css
zero_mcts_rs/: .gitignore  Cargo.toml  pyproject.toml  test.py
zero_mcts_rs/src/: lib.rs
