[project]
name = "gomokuzero"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.21.0",
    "gymnasium>=0.28.0",
    "ipykernel>=6.30.0",
    "torch>=2.7.1",
    "rich>=14.1.0",
    "tqdm>=4.67.1",
    "tensorboard>=2.20.0",
]
