[project]
name = "gomokuzero"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.21.0",
    "gymnasium>=0.28.0",
    "ipykernel>=6.30.0",
    "torch>=2.7.1",
    "rich>=14.1.0",
    "tqdm>=4.67.1",
    "tensorboard>=2.20.0",
    "ray>=2.48.0",
    "scikit-learn>=1.7.1",
    "pygame>=2.5.0",
    "torchinfo>=1.8.0",
    "streamlit>=1.50.0",
    "matplotlib>=3.10.6",
    "graphviz>=0.21",
    "fastapi[standard]>=0.127.0",
    "uvicorn>=0.40.0",
    "websocket>=0.2.1",
    "fastapi-cli>=0.0.20",
    "maturin>=1.11.2",
    "torchsummary>=1.5.1",
]

[tool.setuptools]
# 显式指定包名，只包含核心代码目录
packages = ["gomoku"]

[dependency-groups]
dev = [
    "maturin>=1.11.2",
    "ruff>=0.14.10",
]
