[package]
name = "zero_mcts_rs"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "zero_mcts_rs"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.27.1"
pyo3 = { version = "0.27.0", features = ["extension-module"] }
rand = "0.9.2"
rand_distr = "0.5.1"
